--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,11 +13,13 @@
   --color-warm-brown-600: #89562e;
   --color-warm-brown-700: #6d4323;
   --color-warm-brown-800: #54341b;
+  --color-warm-brown-800-variant: #6b5c53;
   --color-warm-brown-900: #3d2412;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-nunito: var(--font-nunito);
+  --font-cinzel: var(--font-cinzel);
+  --font-instrument: var(--font-instrument-serif);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -110,6 +112,7 @@
   --warm-brown-600: #b98e6a;
   --warm-brown-700: #d1b49b;
   --warm-brown-800: #e3cfc0;
+  --color-warm-brown-800-variant: #6b5c53;
   --warm-brown-900: #f1e7de;
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
