--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,48 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@font-face {
+  font-family: 'Sentient';
+  src: url('/fonts/Sentient_Complete/Sentient-Bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Sentient';
+  src: url('/fonts/Sentient_Complete/Sentient-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Sentient';
+  src: url('/fonts/Sentient_Complete/Sentient-Regular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Sentient';
+  src: url('/fonts/Sentient_Complete/Sentient-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Sentient';
+  src: url('/fonts/Sentient_Complete/Sentient-LightItalic.otf') format('opentype');
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
+}
+
+
+
 @theme inline {
   --color-warm-brown-50: #f8f5f2;
   --color-warm-brown-100: #f1e7de;
@@ -15,10 +57,19 @@
   --color-warm-brown-800: #54341b;
   --color-warm-brown-800-variant: #6b5c53;
   --color-warm-brown-900: #3d2412;
+  --color-test-brown-50: #f7f5ef;
+  --color-test-brown-100: #f3efe3;
+  --color-test-brown-200: #ede5d3;
+  --color-test-brown-300: #e7dcc3;
+  --color-test-brown-400: #e2d4b5;
+  --color-test-brown-500: #dfd7c7;
+  --color-test-brown-600: #bfb7a7;
+  --color-test-brown-700: #9f9787;
+  --color-test-brown-800: #6b5c53;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-nunito: var(--font-nunito);
-  --font-cinzel: var(--font-cinzel);
+  --font-sentient: 'Sentient', 'serif';
   --font-instrument: var(--font-instrument-serif);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -114,6 +165,7 @@
   --warm-brown-800: #e3cfc0;
   --color-warm-brown-800-variant: #6b5c53;
   --warm-brown-900: #f1e7de;
+  --color-test-brown: #dfd7c7;
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
